list group init

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "esbuild": "0.25.0"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
